# openvino.genai

./: CMakeLists.txt
llm/chatglm_cpp/: README.md  chatglm.cpp
llm/llama_cpp/: llama.cpp
llm/mincpmv2_cpp/: clip.cpp  clip.h  minicpmv.cpp  minicpmv_ov.cpp
llm/minicpm_cpp/: CMakeLists.txt  minicpm.cpp
llm/minicpm_longtest/: CMakeLists.txt  minicpm.cpp
samples/cpp/text_generation/: chat_sample.cpp
src/cpp/src/: lora_adapter.cpp
tools/llm_bench/: README.md  c4_dataset.txt  convert.py  llm_to_stateful.py  minicpm_compress.py  minicpm_gptq.py  minicpm_reducelogits.py  minicpm_test.py  requirements_2024.5.txt
